apps/base/karma/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karma-internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - karma.j6n.internal
  rules:
  - backendRefs:
    - name: karma
      port: 8080
